# rss2diaspora-hs

./: .gitignore  Bot.hs  Config.hs  Diaspora.hs  LICENSE  RSS.hs  Readme.md  example_config  itemid  rssbot.cabal
