name:                rssbot
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable rssbot
  main-is:             Bot.hs
  -- other-modules:       
  other-extensions:    OverloadedStrings
  build-depends:       ConfigFile >= 1.1.2
                     , aeson >=0.7 && <0.8
                     , base >=4.7 && <4.8
                     , bytestring >=0.10 && <0.11
                     , exceptions >= 0.6.1
                     , feed >=0.3 && <0.4
                     , http-conduit >=2.1 && <2.2
                     , mtl >= 2.2.1
                     , parsec >=3.1 && <3.2
                     , regex-posix >=0.95 && <0.96
                     , safe >=0.3 && <0.4
                     , strict >= 0.3 && < 0.4
                     , text >=1.1 && <1.2
                     , utf8-string >=0.3 && <0.4
  -- hs-source-dirs:      
  default-language:    Haskell2010
